test-spb-k8s.yaml
# Test de Deployment basico
# probar en url http://spb.127-0-0-1.sslip.io

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: spb
  name: spb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spb
  template:
    metadata:
      labels:
        app: spb
    spec:
      containers:
        - image: mycluster-registry:5000/spb:1.0
          name: spb
          # con "Allways" podemos reutilizar el tag del contenedor. 
          imagePullPolicy: Always
          volumeMounts:
          - name: application-config
            # Si app.jar esta en "/" y montamos en "/config" usa el fichero "application.properties" del configmap automaticamente
            mountPath: "/config"
            readOnly: true
          ports:
            - containerPort: 8080
      volumes:
      - name: application-config
        configMap:
          name:  spb-cm

---
apiVersion: v1
kind: Service
metadata:
  name: spb-svc
spec:
  type: ClusterIP
  selector:
    app: spb
  ports:
    - port: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spb-http
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: spb.127-0-0-1.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spb-svc
                port:
                  number: 8080
